syntax = "proto2";

package ui;

// 大类包含 装备(1) 技能(2) 帝魂(3) 仙盟（4） 进阶系统(5) 升级系统点击(6)  强化元神金装装备(7) 灵童(8)
// 装备小类 装备强化||一键强化(1)  装备升阶(2) 装备升星(3)
// 技能小类 一键升级||升级职业技能(1)
// 帝魂小类 帝魂强化(1) 魂技升级(2)
// 仙盟小类 申请加入仙盟||一键申请(1) 
// 进阶小类 坐骑升阶(0) 战翼升阶(1) 身法升阶(2) 法宝升阶(3) 仙体升阶(4) 暗器升阶(5)
// 升级小类 坐骑升级(1) 战翼升级(2) 暗器升级(3)
// 元神小类 强化武器(0) 强化衣服(1) 强化头盔(2) 强化战靴(3) 强化腰带(4) 强化护手(5) 强化玉坠(6) 强化项链(7) 
// 灵童小类 升级(0)

//点击请求
message CSClick {
    //点击大类
    required int32 clickType=1;
    //点击子类
    required int32 clickSubType=2;
}

//回复
message SCClick {
    
}

